modificacion de la card

--- a/src/components/Alojamiento.astro
+++ b/src/components/Alojamiento.astro
@@ -4,56 +4,72 @@ const Bungalows = [
   {
     title: "Bungalow Basico",
     area: "16m2",
-    tipoCama: "Doble",
+    tipoCama: "Dos plaza",
+    nHabitaciones:1,
     servicios: ["Baño", "Terraza con vista al Mar"],
-    capacidad: 2,
+    capacidad: '2 Huéspedes',
     url: "../../img1.webp",
     price: "S/250.00",
   },
   {
-    title: "Bungalow Basico",
-    area: "16m2",
-    tipoCama: "Doble",
-    servicios: ["Baño", "Terraza con vista al Mar"],
-    capacidad: 2,
-    url: "../../img1.webp",
-    price: "S/250.00",
+    title: "Bungalow Superior I",
+    area: "45m2",
+    tipoCama: "Dos plaza",
+    nHabitaciones:1,
+    servicios: ["Baño", "microondas","tv smart","mesas","sillas","sofa","frigobar","Terraza con vista al Mar"],
+    capacidad: '2 Huéspedes',
+    url: "../../img2.webp",
+    price: "S/350.00",
   },
   {
-    title: "Bungalow Basico",
-    area: "16m2",
-    tipoCama: "Doble",
-    servicios: ["Baño", "Terraza con vista al Mar"],
-    capacidad: 2,
-    price: "S/250.00",
-    url: "../../img1.webp",
+    title: "Bungalow Superior II",
+    area: "42m2",
+    tipoCama: "Dos plaza",
+    nHabitaciones:1,
+    servicios: ["Baño","microondas","tv smart","mesas","sillas","sofa","frigobar","Terraza con vista al Mar"],
+    capacidad: '4 Huéspedes',
+    price: "S/600.00",
+    url: "../../img3.webp",
   },
   {
-    title: "Bungalow Basico",
-    area: "16m2",
-    tipoCama: "Doble",
-    servicios: ["Baño", "Terraza con vista al Mar"],
-    capacidad: 2,
-    url: "../../img1.webp",
-    price: "S/250.00",
+    title: "Suite Matrimonial",
+    area: "55m2",
+    tipoCama: "Queen",
+    nHabitaciones:1,
+    servicios: ["Baño","microondas","tv smart","mesas","sillas","sofa","frigobar","Terraza con vista al Mar"],
+    capacidad: '2 Huéspedes',
+    url: "../../img4.webp",
+    price: "S/500.00",
   },
   {
-    title: "Bungalow Basico",
-    area: "16m2",
-    tipoCama: "Doble",
-    servicios: ["Baño", "Terraza con vista al Mar"],
-    capacidad: 2,
-    url: "../../img1.webp",
-    price: "S/250.00",
+    title: "Suite Familiar",
+    area: "55m2",
+    tipoCama: "Queen,2 Camarotes",
+    nHabitaciones:2,
+    servicios: ["Pequeño espacio con frigobar", "tv smart"," microondas", "mesa", "sillas"," lavadero", "otro espacio para las maletas","piscina con terraza con vista al mar"],
+    capacidad: '6 Huéspedes',
+    url: "../../img5.webp",
+    price: "S/1400.00",
   },
   {
-    title: "Bungalow Basico",
-    area: "16m2",
-    tipoCama: "Doble",
-    servicios: ["Baño", "Terraza con vista al Mar"],
-    capacidad: 2,
+    title: "Casa Tortuga",
+    area: "120m2",
+    tipoCama: "Dos plaza",
+    nHabitaciones:4,
+    servicios: ["Baño", "Terraza con vista al Mar", "sala comedor", "tv smart", "frigobar", "microondas"],
+    capacidad: '8 Huéspedes',
     url: "../../img1.webp",
-    price: "S/250.00",
+    price: "S/1300.00",
+  },
+  {
+    title: "Casa Pelikano",
+    area: "120m2",
+    tipoCama: "Dos plaza",
+    nHabitaciones:3,
+    servicios: ["1 baño", "sala", "chimenea", "tv smart", "frigobar", "microondas", "terraza con vista parcial al mar"],
+    capacidad: '6 Huéspedes',
+    url: "../../img1.webp",
+    price: "S/1100.00",
   },
 ];
 ---
@@ -61,7 +77,7 @@ const Bungalows = [
 <section class="flex flex-col items-center py-12">
   <h2 class="text-2xl font-semibold text-center uppercase">Alojamiento</h2>
   <div class="w-[120px] h-[4px] bg-[#1ABC9C] mt-2 rounded-lg"></div>
-  <div class="flex space-x-3 flex-wrap justify-center">
+  <div class="space-x-3 grid grid-cols-3 ">
     {Bungalows.map((item) => <CardAlojamiento {...item} />)}
   </div>
 </section>
