--- a/src/components/Alojamiento.astro
+++ b/src/components/Alojamiento.astro
@@ -77,7 +77,7 @@ const Bungalows = [
 <section class="flex flex-col items-center py-12">
   <h2 class="text-2xl font-semibold text-center uppercase">Alojamiento</h2>
   <div class="w-[120px] h-[4px] bg-[#1ABC9C] mt-2 rounded-lg"></div>
-  <div class="space-x-3 grid grid-cols-3 ">
+  <div class="space-x-3 grid grid-col-1 lg:grid-cols-3 ">
     {Bungalows.map((item) => <CardAlojamiento {...item} />)}
   </div>
 </section>
