--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,15 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import QuienesSomos from '../components/QuienesSomos.astro';
-import Alojamiento from '../components/Alojamiento.astro';
+import Layout from "../layouts/Layout.astro";
+import QuienesSomos from "../components/QuienesSomos.astro";
+import Alojamiento from "../components/Alojamiento.astro";
+import Ubicacion from "../components/Ubicacion.astro";
+import Testimonios from "../components/Testimonios.astro";
 
 ---
 
 <Layout title="Welcome to Astro.">
-	<QuienesSomos/>
-	<Alojamiento/>
+  <QuienesSomos />
+  <Alojamiento />
+  <Ubicacion />
+  <Testimonios/>
 </Layout>
-
-
