--- a/src/components/CardAlojamiento.astro
+++ b/src/components/CardAlojamiento.astro
@@ -18,7 +18,7 @@ const { title, price,nHabitaciones, area, tipoCama, servicios, capacidad, url } 
 ---
 
 <div
-  class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mt-10"
+  class=" bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mt-10"
 >
   <div class="relative">
     <img
