--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import Header from '../components/Header.astro';
+import Header from "../components/Header.astro";
 import "@fontsource-variable/onest";
 interface Props {
   title: string;
@@ -17,9 +17,10 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+  
   </head>
   <body>
-	<Header></Header>
+    <Header />
     <slot />
   </body>
 </html>
@@ -34,5 +35,5 @@ const { title } = Astro.props;
   }
 </style>
 <script>
-  import "../scripts/menu.js"
+  import "../scripts/menu.js";
 </script>
