--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -66,7 +66,7 @@ import Menu from "../icons/Menu.astro";
     </h2>
     <a
       href="#"
-      class="bg-[#1ABC9C] flex justify-center px-12 text-xl py-3 uppercase lg:py-2 rounded-2xl text-white font-medium"
+      class="bg-[#60a2bf] flex justify-center px-7 lg:px-12 text-lg lg:text-xl py-3  lg:py-2 rounded-2xl text-white font-medium"
       >Reservar</a
     >
   </div>
