--- a/src/components/QuienesSomos.astro
+++ b/src/components/QuienesSomos.astro
@@ -1,9 +1,9 @@
-<main class="bg-[#003366] flex flex-col items-center px-4 py-20">
+<main class="bg-[#f3f3f4] text-[#383D44] flex flex-col items-center px-4 py-20">
   <div class="w-full lg:w-1/2 space-y-5">
-    <h2 class="text-3xl text-white text-center">
+    <h2 class="text-3xl text-center">
       ¡Bienvenido a chinchaycamac, tu refugio al sur ideal!
     </h2>
-    <p class=" text-white leading-relaxed font-extralight">
+    <p class="leading-relaxed font-light">
       En Chinchaycamac, ofrecemos una experiencia única junto al mar, donde el
       lujo se encuentra con la serenidad. Nuestros bungalows privados te brindan
       un oasis de tranquilidad con todas las comodidades modernas que necesitas
