--- a/src/components/Alojamiento.astro
+++ b/src/components/Alojamiento.astro
@@ -77,7 +77,7 @@ const Bungalows = [
 <section class="flex flex-col px-7 lg:px-20">
   <div class="lg:my-14 flex-col flex items-center">
     <h2 class="text-lg lg:text-2xl font-semibold text-center uppercase mt-8">Alojamiento</h2>
-    <div class="w-[120px] h-[4px] bg-[#1ABC9C] mt-2 rounded-lg"></div>
+    <div class="w-[120px] h-[4px] bg-[#60a2bf] mt-2 rounded-lg"></div>
   </div>
 
   <div class="lg:space-x-3  grid  lg:grid-cols-4 ">
