--- a/src/components/Info.astro
+++ b/src/components/Info.astro
@@ -1,7 +1,7 @@
 ---
-const {tipo} = Astro.props;
-
+const { tipo } = Astro.props;
 ---
+
 <li class="flex space-x-2 items-center">
-    <slot/><span class="font-light ">{tipo}</span>
+  <slot /><span class="font-light text-[#383D44]">{tipo}</span>
 </li>
