--- a/src/icons/Personas.astro
+++ b/src/icons/Personas.astro
@@ -5,7 +5,7 @@
   height="24"
   viewBox="0 0 24 24"
   stroke-width="1.5"
-  stroke="currentColor"
+  stroke="#60a2bf"
   fill="none"
   stroke-linecap="round"
   stroke-linejoin="round"
