--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,12 +4,21 @@ import QuienesSomos from "../components/QuienesSomos.astro";
 import Alojamiento from "../components/Alojamiento.astro";
 import Ubicacion from "../components/Ubicacion.astro";
 import Testimonios from "../components/Testimonios.astro";
-
+import Politica from "../components/Politica.astro";
+import Footer from "../components/Footer.astro";
+import WhatsApp from '../icons/WhatsApp.astro';
 ---
 
 <Layout title="Welcome to Astro.">
   <QuienesSomos />
   <Alojamiento />
   <Ubicacion />
-  <Testimonios/>
+  <Testimonios />
+  <Politica />
+  <Footer />
+  <div class="fixed bottom-0 right-0 p-4 z-50 ">
+    <div class="w-14 h-14 rounded-full bg-[#25d366] flex justify-center items-center">
+      <WhatsApp/>
+    </div>
+  </div>
 </Layout>
