mejoramiento de accesibilidad

--- a/src/components/Info.astro
+++ b/src/components/Info.astro
@@ -3,5 +3,5 @@ const { tipo } = Astro.props;
 ---
 
 <li class="flex space-x-2 items-center">
-  <slot /><span class="font-light text-[#383D44]">{tipo}</span>
+  <slot /><span class="font-medium text-[#000]">{tipo}</span>
 </li>
