--- a/src/components/Ubicacion.astro
+++ b/src/components/Ubicacion.astro
@@ -6,15 +6,18 @@
     </h2>
     <div class="w-[120px] h-[4px] bg-[#60a2bf] mt-2 rounded-lg mb-10"></div>
   </div>
-
-  <iframe
+  <figure class="w-full flex justify-center">
+    <iframe
     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d124115.39013177587!2d-76.32485389709473!3d-13.559748223635046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91101378a996f391%3A0xbc0a2ebc66dec429!2sChinchaycamac%20Hotel!5e0!3m2!1ses-419!2spe!4v1710097791621!5m2!1ses-419!2spe"
     style="border:0;"
     width="90%"
     height="450px"
     allowfullscreen=""
+    title="Mapa de google"
     loading="lazy"
     referrerpolicy="no-referrer-when-downgrade"
   >
   </iframe>
+  </figure>
+ 
 </div>
