--- a/src/components/CardAlojamiento.astro
+++ b/src/components/CardAlojamiento.astro
@@ -36,7 +36,7 @@ const {
       alt=""
     />
     <div
-      class="absolute top-0 m-2 px-4 py-2 text-sm rounded-2xl text-white bg-[#60a2bf] font-semibold"
+      class="absolute top-0 m-2 px-4 py-2 text-sm rounded-2xl text-[#63b9de] bg-[#000] font-semibold"
     >
       {price}
     </div>
