mejoramiento de accesibilidad

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Footer from "../components/Footer.astro";
 import WhatsApp from '../icons/WhatsApp.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Alquiler de casas playas en chinchaycamac">
   <QuienesSomos />
   <Alojamiento />
   <Ubicacion />
