--- a/src/components/Politica.astro
+++ b/src/components/Politica.astro
@@ -7,7 +7,7 @@ import palmera from '../../public/palmera.png';
 <div
   class="bg-[#f3f3f4]
    flex-col items-center space-y-2
-   flex lg:flex-row lg:px-20 lg:items-start
+   flex lg:flex-row lg:px-20 lg:py-20 lg:items-start
    px-7 py-4 relative"
 >
   <Certificate />
@@ -18,13 +18,13 @@ import palmera from '../../public/palmera.png';
       realizar una reserva y que el alojamiento las aplique de manera
       consistente
     </p>
-    <a href="#" class="text-[#60a2bf] mt-4 block"
+    <a href="#" class="text-blue-900 mt-4 block"
       >Leer todas las políticas y reglas de alojamiento</a
     >
   </div>
   <Image
     src={palmera}
     alt=""
-    class="w-[20%] h-[270px] absolute right-40 top-[-20px] hidden lg:flex"
+    class="w-[20%] h-[280px] absolute right-40 top-[0px] hidden lg:flex"
   />
 </div>
