--- a/src/components/QuienesSomos.astro
+++ b/src/components/QuienesSomos.astro
@@ -1,4 +1,4 @@
-<main class="bg-[#f3f3f4] text-[#383D44] flex flex-col items-center px-4 py-20">
+<main id="somos" class="bg-[#f3f3f4] text-[#383D44] flex flex-col items-center px-4 py-20">
   <div class="w-full lg:w-1/2 space-y-5">
     <h2 class="text-3xl text-center">
       ¡Bienvenido a chinchaycamac, tu refugio al sur ideal!
