--- a/src/components/Ubicacion.astro
+++ b/src/components/Ubicacion.astro
@@ -1,10 +1,10 @@
-<div class="w-full my-8 flex flex-col items-center bg-gray-50 pb-20">
+<div id="ubicacion" class="w-full my-8 flex flex-col items-center bg-gray-50 pb-20">
 
   <div class="my-8 lg:my-14 flex-col flex items-center">
     <h2 class="text-lg lg:text-2xl font-semibold text-center uppercase">
       Donde puedes encontrarnos
     </h2>
-    <div class="w-[120px] h-[4px] bg-[#60a2bf] mt-2 rounded-lg mb-10"></div>
+    <div class="w-[120px] h-[4px] bg-blue-900 mt-2 rounded-lg mb-10"></div>
   </div>
   <figure class="w-full flex justify-center">
     <iframe
