--- a/src/icons/Cama.astro
+++ b/src/icons/Cama.astro
@@ -4,8 +4,8 @@
   width="24"
   height="24"
   viewBox="0 0 24 24"
-  stroke-width="1.5"
-  stroke="#60a2bf"
+  stroke-width="1.8"
+  stroke="#1e3a8a"
   fill="none"
   stroke-linecap="round"
   stroke-linejoin="round"
