--- a/src/icons/Certificate.astro
+++ b/src/icons/Certificate.astro
@@ -4,7 +4,7 @@
   height="60"
   viewBox="0 0 24 24"
   fill="none"
-  stroke="#60a2bf"
+  stroke="#1e3a8a"
   stroke-width="2"
   stroke-linecap="round"
   stroke-linejoin="round"
