--- a/src/pages/lotes.astro
+++ b/src/pages/lotes.astro
@@ -18,13 +18,13 @@ import { Image } from "astro:assets";
 ---
 
 <Layout title="venta de lotes">
-  <!-- <Preloader></Preloader> -->
+  <Preloader></Preloader>
   <Header title="Tu lote playa soñado" />
   <section class=" lg:px-20 py-20">
 
-    <div class="flex-col text-center px-2 lg:flex  lg:justify-between  lg:gap-x-2 lg:mb-20 ">
+    <div class="flex flex-col lg:flex lg:flex-row items-center justify-between  gap-x-2">
       <h2 class="text-4xl uppercase">Beneficios</h2>
-      <div class=" bg-blue-900 p-[0.8px]"></div>
+      <div class="w-[50%] bg-blue-900 p-[0.8px]"></div>
     </div>
     <!-- Slider main container -->
     <div class="swiper  w-[80%]  my-10">
@@ -89,7 +89,7 @@ import { Image } from "astro:assets";
 
   <!-- Section Conoce más del proyecto -->
   <section class="lg:px-20 px-8 bg-gray-100 py-20 flex flex-col gap-y-10">
-    <div class="flex-col lg:flex items-center justify-between  gap-x-2 ">
+    <div class="flex flex-col  lg:flex-row items-center justify-between  gap-x-2 ">
       <h2 class="text-4xl uppercase">Conoce más del Proyecto</h2>
       <div class="w-[50%] bg-blue-900 p-[0.8px]"></div>
     </div>
@@ -100,7 +100,7 @@ import { Image } from "astro:assets";
         exclusivos departamentos de inversión con vista al mar.
       </p>
 
-      <div class="lg:flex flex flex-col-reverse item justify-between lg:items-start">
+      <div class="lg:flex-row flex flex-col-reverse item justify-between lg:items-start">
         <div class="py-8 text-lg list-none space-y-3">
           <li><a>Area construida 96m2</a></li>
           <li><a>2 Habitaciones</a></li>
@@ -119,7 +119,7 @@ import { Image } from "astro:assets";
   </section>
 
 
-    <div class="lg:px-20  flex-col py-20 lg:flex justify-center">
+    <div class="lg:px-20  flex-col lg:flex-row flex py-20  justify-center">
       <Image class="object-cover w-full  lg:w-2/5" src={folleto} alt="precio"></Image>
       <Image class="lg:object-fill object-center w-full lg:w-2/5 h-[600px] " src={precioLotes} alt="precio"></Image>
       
