añadiendo la seccion final

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -77,7 +77,7 @@ const {title} = Astro.props;
       Lotes</a
     >
     <a
-      href="#"
+      href="/restaurant"
       class="bg-gray-600 gap-x-7 hover:bg-blue-900 flex justify-center px-7 lg:px-12 text-lg lg:text-lg py-3  lg:py-2 rounded-2xl text-white font-light"
       >
       <Kitchen></Kitchen>
