--- a/src/pages/lotes.astro
+++ b/src/pages/lotes.astro
@@ -15,6 +15,7 @@ import folleto from "../../public/folleto.jpg"
 
 
 import { Image } from "astro:assets";
+import BtnWhasht from "../components/BtnWhasht.astro";
 ---
 
 <Layout title="venta de lotes">
@@ -126,7 +127,7 @@ import { Image } from "astro:assets";
     </div>
     <Politica></Politica>
     <Footer></Footer>
-
+    <BtnWhasht></BtnWhasht>
 
 
 </Layout>
