--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import BtnWhasht from "../components/BtnWhasht.astro";
 import QuienesSomos from "../components/QuienesSomos.astro";
 import Alojamiento from "../components/Alojamiento.astro";
 import Ubicacion from "../components/Ubicacion.astro";
@@ -8,7 +9,7 @@ import Politica from "../components/Politica.astro";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import Preloader from '../components/Preloader.astro'
-import WhatsApp from '../icons/WhatsApp.astro';
+
 ---
 
 <Layout title="Alquiler de casas playas en chinchaycamac">
@@ -20,10 +21,6 @@ import WhatsApp from '../icons/WhatsApp.astro';
   <Testimonios />
   <Politica />
   <Footer />
-  <div class="fixed bottom-0 right-0 p-4 z-50 ">
-    <a href="https://api.whatsapp.com/send/?phone=51962887029&text&type=phone_number&app_absent=0" class="w-14 h-14 rounded-full bg-[#25d366] flex justify-center items-center">
-      <WhatsApp/>
-    </a>
-  </div>
+  <BtnWhasht></BtnWhasht>
 
 </Layout>
