termino de la pagina

--- a/src/components/Alojamiento.astro
+++ b/src/components/Alojamiento.astro
@@ -58,7 +58,7 @@ const Bungalows = [
     nHabitaciones:4,
     servicios: ["Baño", "Terraza con vista al Mar", "sala comedor", "tv smart", "frigobar", "microondas"],
     capacidad: '8 Huéspedes',
-    url: "../../img1.webp",
+    url: "../../casatortuga.webp",
     price: "S/1300.00",
   },
   {
@@ -68,7 +68,7 @@ const Bungalows = [
     nHabitaciones:3,
     servicios: ["1 baño", "sala", "chimenea", "tv smart", "frigobar", "microondas", "terraza con vista parcial al mar"],
     capacidad: '6 Huéspedes',
-    url: "../../img1.webp",
+    url: "../../casaPelikano.webp",
     price: "S/1100.00",
   },
 ];
